U6005 plant guesser game - pair programming w Bella, took turns driving and navigating - implemented non-functional multi-choice buttons and added scientific name and styling - fixed shuffling for getting plants